# transmissionbtc

./: .gitignore  CMakeLists.txt  README.md  build.gradle  build.sh  local.properties  proguard-rules.pro
cmake/: Event.cmake  OpenSSL.cmake  Transmission.cmake  cURL.cmake
fastlane/metadata/android/de/: full_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
patches/: openssl_ndk22.patch
src/basic/: AndroidManifest.xml
src/main/: AndroidManifest.xml
src/main/assets/scripts/: set_so_buf.sh
src/main/assets/upnp/: ConnectionManagerScpd.xml  ContentDirectoryScpd.xml
src/main/cpp/: commons.c  commons.cc  commons.h  curl.c  curl.cc  env.c  env.cc  hash.c  hash.cc  native_to_java.c  native_to_java.cc  native_to_java.h  sem.c  sem.cc  stdredirect.c  stdredirect.cc  torrent.c  torrent.cc  transmission-private.h  transmission.c  transmission.cc
src/main/java/com/ap/transmission/btc/: Adapters.java  Baos.java  BindingHelper.java  CompletedFuture.java  EncrMode.java  Localizable.java  Native.java  NaturalOrderComparator.java  PowerLock.java  Prefs.java  Scripts.java  StorageAccess.java  Utils.java
src/main/java/com/ap/transmission/btc/activities/: ActivityBase.java  ActivityResultHandler.java  DownloadTorrentActivity.java  MainActivity.java  OpenTorrentActivity.java  SelectFileActivity.java
src/main/java/com/ap/transmission/btc/func/: Consumer.java  Function.java  Promise.java  Supplier.java
src/main/java/com/ap/transmission/btc/http/: HttpServer.java  HttpVersion.java  Method.java  Range.java  Request.java  RequestHandler.java  Response.java  SimpleHttpServer.java
src/main/java/com/ap/transmission/btc/http/handlers/: AssetHandler.java  HandlerBase.java  SoapHandler.java  StaticResourceHandler.java
src/main/java/com/ap/transmission/btc/http/handlers/torrent/: PlaylistHandler.java  TorrentHandler.java
src/main/java/com/ap/transmission/btc/http/handlers/upnp/: ContentDirectoryHandler.java  DescriptorHandler.java
src/main/java/com/ap/transmission/btc/receivers/: BootOrUpdateReceiver.java  ConnectivityChangeReceiver.java
src/main/java/com/ap/transmission/btc/services/: TransmissionService.java
src/main/java/com/ap/transmission/btc/ssdp/: SsdpServer.java
src/main/java/com/ap/transmission/btc/torrent/: DuplicateTorrentException.java  MediaInfo.java  NoSuchTorrentException.java  Torrent.java  TorrentDir.java  TorrentException.java  TorrentFile.java  TorrentFs.java  TorrentItem.java  TorrentItemContainer.java  TorrentStat.java  Transmission.java
src/main/java/com/ap/transmission/btc/views/: BrowseView.java  CheckBoxView.java  PageFragment.java  PathItem.java  TabInfo.java  TorrentView.java  TorrentsList.java  WatchItemView.java  WatchView.java
src/main/res/drawable/: border.xml  focusable.xml  highlight.xml  separator.xml
src/main/res/layout/: about.xml  browse_view.xml  checkbox_view.xml  dir_view.xml  download_torrent.xml  downloads.xml  file_view.xml  main.xml  path_view.xml  proxy.xml  rss.xml  select_file.xml  settings.xml  torrent_view.xml  watch_dirs.xml  watch_view.xml
src/main/res/menu/: main_menu.xml  select_file_menu.xml  torrent_menu.xml
src/main/res/values/: attrs.xml  colors.xml  ids.xml  strings.xml  theme.xml
src/main/res/values-ru/: strings.xml
src/test/java/com/ap/transmission/btc/: MiscTest.java
